# pikuma_3d

./: .gitignore  CMakeLists.txt  Makefile
src/: draw.c  draw.h  geometry.c  geometry.h  main.c  obj_parser.c  obj_parser.h  vector.c  vector.h
test/: CMakeLists.txt  test_obj_parser.c
